# alpaca_options

./: .gitignore  BACKTEST_COMPARISON_REPORT.md  BACKTEST_VALIDATION_REPORT.md  CLAUDE.md  CODEBASE_CLEANUP_SUMMARY.md  CODE_QUALITY_EVALUATION.md  CONFIG_UPDATE_SUMMARY.md  Context.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_SPEC.md  DOLTHUB_SETUP.md  EXTENDED_BACKTEST_CAPABILITIES.md  EXTENDED_BACKTEST_REPORT.md  MULTI_SYMBOL_BACKTEST_REPORT.md  OPTIMIZATION_STATUS.md  PAPER_TRADING_DEPLOYMENT_CHECKLIST.md  PAPER_TRADING_DEPLOYMENT_GUIDE.md  PAPER_TRADING_QUICKSTART.md  PHASE1_FINDINGS.md  README_VALIDATION.md  REAL_DATA_BACKTEST_FIXES.md  SCREENER_ENHANCEMENT_PLAN.md  SCREENER_INTEGRATION_VERIFIED.md  STRATEGY_OPTIMIZATION_PLAN.md  SYNTHETIC_DATA_REMOVAL.md  VALIDATION_SUMMARY.md  analyze_real_data_quality.py  pyproject.toml  test_env_loading.py  test_real_options_data.py
.claude/: settings.json
Context/Features/001-LowCapitalStrategy/: Spec.md  Steps.md  Tech.md
config/: default.yaml  paper_qqq.yaml  paper_trading.yaml
docs/: screener_scaling_architecture.md
docs/archive/: PAPER_TRADING_VERIFICATION.md  PHASE2A_PROGRESS.md  PHASE2_TECHNICAL_SPEC.md
scripts/: DEPRECATED_SCRIPTS_README.md  analyze_options_chains.py  backtest_dolthub_aapl.py  backtest_dolthub_options.py  backtest_enhanced_screener.py  backtest_multi_symbol.py  backtest_optimized_config.py  backtest_real_options.py  check_dolthub_coverage.py  comprehensive_backtest.py  comprehensive_low_tier_test.py  debug_backtest.py  debug_backtest_flow.py  debug_vertical_spread.py  deep_debug_backtest.py  diagnose_iv_rank.py  diagnostic_backtest.py  download_extended_sample.py  download_historical_chains.py  download_historical_data.py  fix_cache_option_type.py  run_backtests.py  run_backtests_with_alpaca.py  run_capital_tier_backtests.py  run_low_tier_debug.py  run_paper_trading.py  run_screener.py  test_alpaca_connection.py  test_alpaca_data.py  test_cash_flow_health.py  test_enhanced_screener.py  test_iv_rank.py  test_logging.py  test_screener_performance.py  validate_optimized_config.py  validate_options_trading.py  validate_sec_enhancements.py
scripts/optimization/: PARALLELIZATION_README.md  README.md  optimize_delta.py  optimize_delta_parallel.py  optimize_dte.py  optimize_grid_parallel.py  optimize_profit_loss_parallel.py
scripts/validation/: monitor_walk_forward.sh  test_alpaca_connection.py  test_dolthub_api.py  test_dolthub_fetcher.py  test_option_execution.py  verify_paper_account.py  walk_forward_final.py  walk_forward_parallel.py  walk_forward_validation.py
src/alpaca_options/: __init__.py  cli.py
src/alpaca_options/alpaca/: __init__.py  client.py  data.py  options.py  trading.py
src/alpaca_options/backtesting/: __init__.py  alpaca_options_fetcher.py  data_loader.py  dolthub_hosted_fetcher.py  dolthub_options_fetcher.py  engine.py  execution_model.py
src/alpaca_options/core/: __init__.py  capital_manager.py  config.py  engine.py  events.py
src/alpaca_options/data/: sec_filings.py
src/alpaca_options/risk/: __init__.py  manager.py
tests/: conftest.py  test_cli.py
tests/backtesting/: test_execution_model.py
tests/test_backtesting/: __init__.py  test_comparison_output.py  test_slippage_model.py
tests/test_integration/: test_engine_integration.py
tests/test_strategies/: test_debit_spread.py  test_wheel.py
tests/test_utils/: test_regime_classifier.py  test_strategy_comparator.py
(+26 files in other folders)
